--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,12 @@
     <p id="aboutText"></p>
   </section>
 
+  <!-- Meals (search results / filtered) -->
+  <section class="section">
+    <div class="section-head">
+    </div>
+    <div id="mealsGrid" class="card-grid"></div>
+  </section>
 
   <!-- Categories grid (always visible like screenshots) -->
   <section class="section">
