Update header and section titles for consistency in casing.

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   <header class="topbar">
     <div class="brand">
       <span class="home-icon">🏠</span>
-      <span class="brand-text">MEAL FINDER</span>
+      <a href="./Index.html"><span class="brand-text">MEAL FINDER</span></a>
     </div>
     <button class="hamburger" id="hamburger" aria-label="Open menu">
       <span></span><span></span><span></span>
@@ -43,7 +43,7 @@
   <!-- Meal Details -->
   <section id="mealDetails" class="details hidden">
     <div class="breadcrumb" id="breadcrumb"></div>
-    <h3 class="section-head">Meal Details</h3>
+    <h3 class="section-head">MEAL DETAILS</h3>
 
     <div class="details-body">
       <div class="details-image">
@@ -91,7 +91,7 @@
   <!-- Meals Grid -->
   <section id="mealsSection" class="section hidden">
     <div class="section-head">
-      <h2 id="mealsHeading">Meals</h2>
+      <h2 id="mealsHeading">MEALS</h2>
     </div>
     <div id="mealsGrid" class="card-grid"></div>
   </section>
@@ -99,7 +99,7 @@
   <!-- Categories Grid -->
   <section id="categoriesSection" class="section">
     <div class="section-head">
-      <h2>Categories</h2>
+      <h2>CATEGORIES</h2>
     </div>
     <div id="categoriesGrid" class="card-grid"></div>
   </section>
