Updated home icon in the top bar for improved branding.

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <!-- Top Bar -->
   <header class="topbar">
     <div class="brand">
-      <span class="home-icon">🏠</span>
+      <span class="home-icon">🍴</span>
       <a href="./Index.html"><span class="brand-text">MEAL FINDER</span></a>
     </div>
     <button class="hamburger" id="hamburger" aria-label="Open menu">
